deploy/ocp/deploy-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"ocr-svc"}]'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/glroland/sudoku.git
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2020-10-25T22:42:23Z"
  labels:
    app: app
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: sudoku
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "12"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:app.openshift.io/connects-to: {}
          f:app.openshift.io/vcs-ref: {}
          f:app.openshift.io/vcs-uri: {}
          f:openshift.io/generated-by: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.openshift.io/runtime: {}
          f:app.openshift.io/runtime-version: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
          f:deploymentconfig: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Mozilla
    operation: Update
    time: "2020-10-26T00:11:22Z"
  name: app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: app
    deploymentconfig: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"ocr-svc"}]'
    openshift.io/host.generated: "true"
  creationTimestamp: "2020-10-25T22:42:23Z"
  labels:
    app: app
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: sudoku
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "12"
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    time: "2020-10-25T22:42:23Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:app.openshift.io/connects-to: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.openshift.io/runtime: {}
          f:app.openshift.io/runtime-version: {}
      f:spec:
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:caCertificate: {}
          f:certificate: {}
          f:insecureEdgeTerminationPolicy: {}
          f:key: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: Mozilla
    operation: Update
    time: "2020-10-26T00:11:23Z"
  name: app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEKzCCAxOgAwIBAgIUEbl6frxrwvK2aEo0LuyQT2Q2jfEwDQYJKoZIhvcNAQEF
[...]
      l3P4OkjQvGvLF7635AnT
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEKzCCAxOgAwIBAgIUEbl6frxrwvK2aEo0LuyQT2Q2jfEwDQYJKoZIhvcNAQEF
[...]
      l3P4OkjQvGvLF7635AnT
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAwTGlF2BWus7AhcyGLO1uFgX2jtBdn5/hVPTCxxBg1x8d1fj9
[...]
      leM16XtkRXO/roZKVZaRjF5nF4UG5tbsplAWgr4Evn607zxIKDgVKA==
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: app
    weight: 100
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"ocr-svc"},{"apiVersion":"apps/v1","kind":"Deployment","name":"svc"}]'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/glroland/sudoku.git
    deployment.kubernetes.io/revision: "5"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"app:latest","namespace":"sudoku"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2020-10-25T22:42:23Z"
  generation: 7
  labels:
    app: app
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: sudoku
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "12"
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:template:
          f:spec:
            f:containers:
              k:{"name":"app"}:
                f:image: {}
    manager: openshift-controller-manager
    operation: Update
    time: "2020-10-25T22:51:08Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:alpha.image.policy.openshift.io/resolve-names: {}
          f:app.openshift.io/connects-to: {}
          f:app.openshift.io/vcs-ref: {}
          f:app.openshift.io/vcs-uri: {}
          f:image.openshift.io/triggers: {}
          f:openshift.io/generated-by: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.openshift.io/runtime: {}
          f:app.openshift.io/runtime-version: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector:
          f:matchLabels:
            .: {}
            f:app: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:labels:
              .: {}
              f:app: {}
              f:deploymentconfig: {}
          f:spec:
            f:containers:
              k:{"name":"app"}:
                .: {}
                f:env:
                  .: {}
                  k:{"name":"NODE_TLS_REJECT_UNAUTHORIZED"}:
                    .: {}
                    f:name: {}
                    f:value: {}
                  k:{"name":"PORT"}:
                    .: {}
                    f:name: {}
                    f:value: {}
                  k:{"name":"REACT_APP_SUDOKU_URL_OCRSVC"}:
                    .: {}
                    f:name: {}
                    f:value: {}
                  k:{"name":"REACT_APP_SUDOKU_URL_SVC"}:
                    .: {}
                    f:name: {}
                    f:value: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:ports:
                  .: {}
                  k:{"containerPort":8080,"protocol":"TCP"}:
                    .: {}
                    f:containerPort: {}
                    f:protocol: {}
                f:resources: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
    manager: Mozilla
    operation: Update
    time: "2020-10-26T00:11:26Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:availableReplicas: {}
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    time: "2020-10-26T00:11:26Z"
  name: app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app
        deploymentconfig: app
    spec:
      containers:
      - env:
        - name: REACT_APP_SUDOKU_URL_SVC
          value: http://svc:8080
        - name: REACT_APP_SUDOKU_URL_OCRSVC
          value: http://ocr-svc:8080
        - name: NODE_TLS_REJECT_UNAUTHORIZED
          value: "0"
        - name: PORT
          value: "3000"
        image: app:latest
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
